UI Components, fixed placement of legacy expand/collapse II: Fix of #27411

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -13055,7 +13055,7 @@ span.ilIcalIcon {
 /* Services/Accordion */
 .il_VAccordionHead,
 .il_HAccordionHead {
-  padding: 5px 5px 5px 35px;
+  padding: 8px 8px 8px 38px;
   text-align: left;
   cursor: pointer;
   color: #557196;
